# bp-gen

./: AGENTS.md  README.md  pyproject.toml
examples/: input.json
samples/: example_input.json  golden_plan.json
src/bp_gen/: __init__.py  api.py  cli.py  generator.py  models.py  schemas.py  validator.py
src/bp_gen/services/: __init__.py  plan_generator.py
tests/: test_business_plan_validator.py  test_plan_generator.py  test_validator.py
tests/fixtures/: golden_plan.json
